# KYGX

./: CMakeLists.txt  DOCS.md  Makefile  README.md
CMake/: ARM11.cmake  Common.cmake  Overrides.cmake  Toolchain.cmake
CMake/BM/: ARM9.cmake  FIRM.cmake  Toolchain.cmake
Include/GX/: Allocator.h  Command.h  CommandBuffer.h  Defs.h  GX.h  Interrupt.h  Utility.h
Include/GX/Helpers/: TextureCopy.h
Include/GX/Wrappers/: DisplayTransfer.h  FlushCacheRegions.h  MemoryFill.h  ProcessCommandList.h  RequestDMA.h  TextureCopy.h
Include/KYGX/: Allocator.h  Command.h  CommandBuffer.h  Defs.h  GX.h  Interrupt.h  Sync.h  Utility.h
Include/KYGX/Wrappers/: DisplayTransfer.h  FlushCacheRegions.h  MemoryFill.h  ProcessCommandList.h  RequestDMA.h  TextureCopy.h
Source/: AllocatorCommon.c  Command.c  CommandBuffer.c  GX.c  Interrupt.c  QTMRAM.h  State.h
Source/BM/: Allocator.c  CmdImpl.h  Platform.c  PlatformState.h  StateBegin.h  StateEnd.h
Source/HOS/: Allocator.c  Platform.c  PlatformState.h  State.c  StateBegin.h  StateEnd.h
Tests/: Boilerplate.h  CMakeLists.txt  RectTest.c  SyncTest.c
Tests/BM/: CMakeLists.txt
Tests/BM/ARM11/: CMakeLists.txt  RectTest.c  SyncTest.c  TestAsync.c  TestQTM.c  TestSync.c
Tests/BM/ARM9/: CMakeLists.txt
Tests/HOS/: CMakeLists.txt  QTMTest.c  RectTest.c  SyncTest.c  TestAsync.c  TestQTM.c  TestSync.c
Tests/HOS/Async/: CMakeLists.txt
Tests/HOS/Downscale/: CMakeLists.txt  Main.c
Tests/HOS/Downscale/RomFS/: EpicSkeleton.data
Tests/HOS/QTM/: CMakeLists.txt
Tests/HOS/Sync/: CMakeLists.txt
