include(FIRM)

add_subdirectory(ARM9)
add_subdirectory(ARM11)

set(ARM9_LOAD_ADDRESS 0x08000040)
set(ARM9_ENTRYPOINT 0x08000040)
set(ARM9_COPY_METHOD NDMA)

set(ARM11_LOAD_ADDRESS 0x1FF89000)
set(ARM11_ENTRYPOINT 0x1FF89034)
set(ARM11_COPY_METHOD XDMA)

# SyncTest
make_firm(SyncTestFIRM
    ARM9 Common9_bin ${ARM9_LOAD_ADDRESS} ${ARM9_ENTRYPOINT} ${ARM9_COPY_METHOD}
    ARM11 SyncTest_bin ${ARM11_LOAD_ADDRESS} ${ARM11_ENTRYPOINT} ${ARM11_COPY_METHOD}
)

# RectTest
make_firm(RectTestFIRM
    ARM9 Common9_bin ${ARM9_LOAD_ADDRESS} ${ARM9_ENTRYPOINT} ${ARM9_COPY_METHOD}
    ARM11 RectTest_bin ${ARM11_LOAD_ADDRESS} ${ARM11_ENTRYPOINT} ${ARM11_COPY_METHOD}
)