include(BM/FIRM)

add_subdirectory(ARM9)
add_subdirectory(ARM11)

set(ARM9_LOAD_ADDRESS 0x08000040)
set(ARM9_ENTRYPOINT 0x08000040)
set(ARM9_COPY_METHOD NDMA)

set(ARM11_LOAD_ADDRESS 0x1FF89000)
set(ARM11_ENTRYPOINT 0x1FF89034)
set(ARM11_COPY_METHOD XDMA)

# TestSync
make_firm(KYGXTestSyncFIRM
    ARM9 Common9_bin ${ARM9_LOAD_ADDRESS} ${ARM9_ENTRYPOINT} ${ARM9_COPY_METHOD}
    ARM11 KYGXTestSync_bin ${ARM11_LOAD_ADDRESS} ${ARM11_ENTRYPOINT} ${ARM11_COPY_METHOD}
)

# TestAsync
make_firm(KYGXTestAsyncFIRM
    ARM9 Common9_bin ${ARM9_LOAD_ADDRESS} ${ARM9_ENTRYPOINT} ${ARM9_COPY_METHOD}
    ARM11 KYGXTestAsync_bin ${ARM11_LOAD_ADDRESS} ${ARM11_ENTRYPOINT} ${ARM11_COPY_METHOD}
)

# TestQTM
#make_firm(KYGXTestQTMFIRM
#    ARM9 Common9_bin ${ARM9_LOAD_ADDRESS} ${ARM9_ENTRYPOINT} ${ARM9_COPY_METHOD}
#    ARM11 KYGXTestQTM_bin ${ARM11_LOAD_ADDRESS} ${ARM11_ENTRYPOINT} ${ARM11_COPY_METHOD}
#)